name:                pgm
version:             0.1.0.0
synopsis:            basic pgm stuff
author:              Ian Horn
maintainer:          horn.imh@gmail.com
copyright:           Copyright (c) 2014, Ian Horn
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PGM.Elim,
                       PGM.Factor,
                       PGM.Graph,
                       PGM.Statistics,
                       PGM.Vars
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <5
                     , containers >= 0.5.5.1
                     , data-reify >= 0.6
  ghc-options:         -O2
  ghc-prof-options:    -O2 -Wall -prof -fprof-auto -fprof-cafs -rtsopts

executable run-pgm
  hs-source-dirs:      examples
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <5
                     , pgm
  ghc-options:         -O2
  ghc-prof-options:    -O2 -Wall -prof -fprof-auto -fprof-cafs -rtsopts
